[project]
name = "aadhar-dataset"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.8",
    "pandas>=2.3.3",
    "plotly>=6.5.2",
    "streamlit>=1.53.0",
]

[tool.setuptools]
py-modules = ["main", "helper"]
